# evo-harness

./: .gitignore  LICENSE  README.md  plan_doc.md  pyproject.toml
.cursor/plans/: evoharness_implementation_plan_a8411104.plan.md
evoharness/cli/: main.py  run_cmd.py
evoharness/core/: candidate.py  config.py  cost_tracker.py  evaluator.py  frontier.py  history.py  lineage.py  loop.py  validator.py
evoharness/experience_cli/: evo_query.py
evoharness/proposers/: anthropic_api.py  base.py
evoharness/sandbox/: __init__.py  base.py  subprocess_sandbox.py
examples/reasoning-agent/: .env.example  .gitignore  evo.toml
examples/reasoning-agent/evals/: eval_suite.py
examples/reasoning-agent/harness/: agent.py
tests/: test_candidate.py  test_config.py  test_cost_tracker.py  test_evaluator.py  test_experience_cli.py  test_frontier.py  test_history.py  test_lineage.py  test_loop.py  test_validator.py
